# ProyectoCompiI

./: CMakeLists.txt  ProjectLexer.h  ProjectParser.cpp  ProjectParser.h  Project_ast.h  all_symbols.txt  for.txt  ggrammar.cpp  ggrammar.h  ggrammar_v1.txt  ggrammar_v2.txt  grammar_v1.txt  hello.py  if.txt  input.txt  main.cpp  parser.cpp  parser.h
fa/: arimetical.jff  comments.jff  decimal.jff  delimeter.jff  delimeter_prov.jff  ident.jff  indentation.jff  number.jff  project.fa2l  relational.jff  relational_prov.jff  start.jff  string.jff
programs/: arithOp.txt  input.txt
